--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="calculator">
         <!-- Display -->
         <div class="calculator-display">
-            <h1>1234567890</h1>
+            <h1>1234567812341231231234567812341231239090</h1>
         </div>
         <!-- Buttons -->
         <div class="calculator-buttons">
@@ -34,7 +34,7 @@
             <button value="3">3</button>
             <button class="decimal" value=".">.</button>
             <button value="0">0</button>
-            <button class="clear" id="clear-button" value="clear">C</button>
+            <button class="clear" id="clear-button">C</button>
             <button class="equal-sign operator" value="=">=</button>
         </div>
     </div>
